# ZPI

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
.githooks/: pre-commit
.github/workflows/: release.yml
database/: Cargo.toml
database/src/: lib.rs
database/src/models/: achievement.rs  service.rs  services.rs  tag.rs  user.rs
database/src/repos/: achievement.rs  service.rs  services.rs  tag.rs  user.rs
migrations/: 20250829195153_user.sql  20250831220344_user.sql  20250902195247_tags.sql  20250902195248_tags.sql  20250902195249_tags.sql  20250911163516_achievement.sql
src/: auth.rs  config.rs  db.rs  error.rs  format.rs  image.rs  lib.rs  main.rs  middleware.rs  pages.rs
src/dto/: achievement.rs  goal.rs  mod.rs  service.rs  user.rs
src/extractors/: admin.rs  api_key.rs  authenticated_user.rs  mod.rs
src/handlers/: achievement.rs  auth.rs  image.rs  mod.rs  service.rs  services.rs  user.rs  version.rs
src/models/: tag.rs  user.rs
static/: error.html  loggedin.html  login.html  upload.css  upload.html
templates/: error.html  login.html  upload.html
tests/: achievement.rs  image.rs  service.rs  tags.rs  user.rs
tests/common/: into_struct.rs  mod.rs  router.rs  test_objects.rs
tests/fixtures/: achievements.sql  services.sql  tags.sql  unlocks.sql  user_1.sql  users.sql
ui/: .env.example  package-lock.json  package.json  vite.config.ts
ui/src/: app.html
ui/src/lib/: globalFunctions-Types.ts
ui/src/lib/components/: CheckedLabel.svelte  Error.svelte  Footer.svelte  ImageChangeModal.svelte  Modal.svelte  Navbar.svelte  Profile.svelte  ProfileImage.svelte  ProfileSidebar.svelte  ProfileSummary.svelte  ProfileTag.svelte  ShowcaseDisplay.svelte  Tooltip.svelte
ui/src/lib/components/achievements/: Achievement.svelte  AchievementDisplay.svelte  AchievementEditModal.svelte  AchievementServiceGroup.svelte
ui/src/lib/components/icons/: AchievementIcon.svelte  ArrowNoBaseIcon.svelte  CheckIcon.svelte  CrossIcon.svelte  PencilIcon.svelte
ui/src/lib/components/profile-components/: ImageChangeModal.svelte  Profile.svelte  ProfileImage.svelte  ProfileSidebar.svelte  ProfileSummary.svelte  ProfileTag.svelte
ui/src/lib/components/profile-components/sidebar-components/: AboutBlock.svelte  SocialLink.svelte
ui/src/lib/components/showcases/: AchievementShowcase.svelte  QuoteShowcase.svelte  ShowcaseDisplay.svelte
ui/src/lib/components/sidebar-components/: AboutBlock.svelte  SocialLink.svelte
ui/src/routes/: +error.svelte  +layout.svelte  +page.svelte
ui/src/routes/achievements/: +page.svelte
ui/src/routes/profile/[username]/: +page.svelte
