[package]
name = "zpi"
version = "1.3.0"
edition = "2024"

[dependencies]
image = "0.25.6"
axum = { version = "0.8.4", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.7"
headers = "0.4.1"
rand = "0.9.2"
reqwest = { version = "=0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.6", features = [
    "trace",
    "fs",
    "compression-zstd",
] }
tower-sessions = "0.14.0"
tracing = "=0.1"
tracing-subscriber = { version = "=0.3", features = ["env-filter"] }
svg = "0.18.0"
thiserror = "2.0.16"
