[package]
name = "zpi"
version = "1.3.1"
edition = "2024"
rust-version = "1.88"

[[bin]]
name = "zpi"
path = "src/main.rs"

[workspace]
members = ["database"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
dbg_macro = "deny"
panic = "warn"

[dependencies]
svg = { version = "0.18.0", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
headers = { version = "0.4.1", default-features = false }
serde_json = { version = "1.0.142", default-features = false }
tracing = { version = "=0.1", default-features = false }
tokio-util = { version = "0.7.16", default-features = false, features = ["io"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
axum-extra = { version = "0.10.1", default-features = false, features = [
    "typed-header",
] }
rand = { version = "0.9.2", default-features = false, features = [
    "small_rng",
    "thread_rng",
] }
reqwest = { version = "=0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tower-sessions = { version = "0.14.0", default-features = false, features = [
    "axum-core",
    "memory-store",
] }
tracing-subscriber = { version = "=0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "signal",
    "process",
] }
tower-http = { version = "0.6.6", default-features = false, features = [
    "trace",
    "fs",
    "compression-zstd",
    "cors",
] }
axum = { version = "0.8.4", default-features = false, features = [
    "multipart",
    "macros",
    "http1",
    "tokio",
    "query",
    "json",
] }

database = { path = "database" }

[dev-dependencies]
http-body-util = "0.1.2"
tower = { version = "0.4.13", default-features = false, features = ["util"] }
mime = "0.3"
test-log = {version = "0.2", default-features = false, features = ["trace"]}
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
