[package]
name = "database"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "database"
path = "src/lib.rs"

[dependencies]
thiserror = { version = "2.0.16", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
chrono = { version = "0.4.42", default-features = false, features = ["serde", "clock"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
rand = {version = "0.9.2", default-features = false}
base-62 = {version = "0.1.1", default-features = false}
